wal-macros/tests/html_macro_tests/elements/element_without_opening_fail.stderr
error: This closing tag does not have a corresponding opening tag. (hint: try adding '<div>')
 --> tests/html_macro_tests/elements/element_without_opening_fail.rs:4:13
  |
4 |     html! { </div> };
  |             ^^^^^^

error: This closing tag does not have a corresponding opening tag. (hint: try adding '<span>')
 --> tests/html_macro_tests/elements/element_without_opening_fail.rs:5:13
  |
5 |     html! { </span> };
  |             ^^^^^^^

error: This closing fragment does not have a corresponding opening fragment. (hint: try adding '<>')
 --> tests/html_macro_tests/elements/element_without_opening_fail.rs:6:13
  |
6 |     html! { </> };
  |             ^^^

error: This closing tag does not have a corresponding opening tag. (hint: try adding '<span>')
 --> tests/html_macro_tests/elements/element_without_opening_fail.rs:7:18
  |
7 |     html! { <div></span> };
  |                  ^^^^^^^

error: This closing tag does not have a corresponding opening tag. (hint: try adding '<div>')
 --> tests/html_macro_tests/elements/element_without_opening_fail.rs:8:24
  |
8 |     html! { <div><span></div></span></div> };
  |                        ^^^^^^
